test/ui/tests/lowering/out-of-line-modules/empty-subfolder-missing-file.stderr
error[E016]: could not load the module `shapeless`
 --> ${DIRECTORY}/lowering/out-of-line-modules/empty-subfolder-missing-file.lushui:3:1
  |
3 | module shapeless
  | ^^^^^^^^^^^^^^^^ 
  |
 note: `${DIRECTORY}/lowering/out-of-line-modules/empty-subfolder-missing-file/shapeless.lushui`: No such file or directory (os error 2)

error: aborting due to previous error
 note: the error E016 has a detailed explanation
 help: run `lushui explain E016` to view it

